scrolling images. to fix: 2nd image is visible below the current

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -43,7 +43,7 @@
 }
 .comics__container {
 	max-height: 600px;
-	overflow: auto;
+	overflow: hidden;
 
 }
 .comics__content {
